--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "scripts": {
     
     "start": "fractal start --sync",
+    "fractal:build": "fractal build",
     "build": "webpack --config webpack.config.js",
     "watch": "webpack --config webpack.config.js --watch",
     "build:all": "npm run build && npm run fractal:build",
