--- a/package.json
+++ b/package.json
@@ -14,6 +14,11 @@
   "author": "ROTY Jeremy <contact@intranets.fr>",
   "type": "commonjs",
   "main": "index.js",
+  "keywords": [
+    "grid",
+    "atom",
+    "css"
+  ],
   "scripts": {
     
     "start": "fractal start --sync",
