adding documentation implementation

--- a/components/space/space.config.yml
+++ b/components/space/space.config.yml
@@ -1,4 +1,4 @@
 title: Space
 context:
-    sizes: [8,10,12,14,16,18,20,22,24,26,28,32,38,40,42,44,48,50,52,56,60,64,72,84,92]
+    sizes: [0, 2, 4, 6, 8, 10, 12, 14, 16, 18, 20, 22, 24, 26, 28, 32, 38, 40, 42, 44, 48, 50, 52, 56, 60, 64, 72, 84, 92]
     
