--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "public/intranets-design-system"]
-	path = public/intranets-design-system
+	path = public/
 	url = https://github.com/intranetsfr/intranets-design-system.git
     branch = main
