--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
-[submodule "public"]
-	path = public
+[submodule "intranets-design-system"]
+	path = intranets-design-system
 	url = https://github.com/intranetsfr/intranets-design-system.git
     branch = main
